# knit

./: .dockerignore  .gitignore  Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml  release.yml
crates/knit-runtime/: Cargo.toml
crates/knit-runtime/src/: config.rs  eject.rs  envfile.rs  lib.rs  plan.rs  state.rs  support.rs  transform.rs  up.rs  yaml.rs
docs/: architecture.md  change-group-schema.md  manual-test.md  quickstart.md  reference.md  runtime-setup.md  windows.md
schemas/: agent-context.schema.json  bundle.schema.json  config.schema.json  contexts.schema.json  land-plan.schema.json  land-run.schema.json  merge-run.schema.json  project.schema.json  views.schema.json
src/: advice.rs  checkout.rs  cli.rs  commands.rs  git.rs  history.rs  ids.rs  lib.rs  main.rs  model.rs  output.rs  paths.rs  repo_selectors.rs  selectors.rs  status.rs  store.rs  time.rs  tracking.rs
src/commands/: add.rs  agent.rs  agents.rs  base.rs  bundle.rs  check.rs  checkpoint.rs  cherrypick.rs  clean.rs  close.rs  commit.rs  config.rs  diff.rs  doctor.rs  fetch.rs  git_credential.rs  git_passthrough.rs  history.rs  init.rs  land.rs  log.rs  merge.rs  mod.rs  org.rs  project.rs  publish.rs  pull.rs  push.rs  remote.rs  remove.rs  reset.rs  revert.rs  run.rs  runtime.rs  schema.rs  shape.rs  stage.rs  status.rs  sync.rs  tag.rs  (+5 more)
src/commands/bundle/: lifecycle.rs  mod.rs  prune.rs  validate.rs
src/commands/bundle/prune/: assess.rs  mod.rs  orphans.rs
src/commands/history/: mod.rs  related.rs  target.rs
src/commands/land/: artifact.rs  check.rs  display.rs  execute.rs  mod.rs  plan.rs  process.rs  rollback.rs  types.rs  update.rs  validate.rs
src/commands/merge/: compat.rs  mod.rs  report.rs  run.rs
src/commands/publish/: mod.rs  pr_body.rs  remote.rs  scope.rs  status.rs  sync.rs
src/commands/remote/: client.rs  clone.rs  credentials.rs  facade.rs  helpers.rs  history.rs  mod.rs  projects.rs  pull.rs  push.rs
src/commands/revert/: apply.rs  mod.rs  plan.rs
src/commands/runtime/: mod.rs  state.rs  transform.rs  up.rs
src/model/: bundle.rs  config.rs  history.rs  mod.rs  org.rs  project.rs  view.rs  workitem.rs
src/providers/: forgejo.rs  github.rs  gitlab.rs  mod.rs
src/providers/github/: api.rs  mod.rs  transport.rs
tests/: bundle.rs  bundle_pull.rs  check.rs  cleanup.rs  clone.rs  config.rs  feature_flow.rs  ids.rs  land.rs  merge.rs  model.rs  project.rs  publish.rs  runtime.rs  smoke.rs  status.rs  sync.rs  tag.rs
tests/common/: mod.rs
