[package]
name = "knit"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A local-first CLI for coordinating cross-repo feature bundles."

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dunce = "1.0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
