[package]
# Published as `knit-cli` (the crates.io name `knit` is taken); the installed
# binary is still `knit`.
name = "knit-cli"
version = "0.1.0-alpha.1"
edition = "2021"
license = "Apache-2.0"
description = "A local-first CLI for coordinating cross-repo feature bundles."
repository = "https://github.com/marc-merino/knit"
homepage = "https://github.com/marc-merino/knit"
readme = "README.md"
keywords = ["git", "monorepo", "worktree", "cross-repo", "orchestration"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.74"

[lib]
name = "knit"
path = "src/lib.rs"

[[bin]]
name = "knit"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dunce = "1.0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
